--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,81 @@
 <h1><b>pwschess</b></h1>
 {{fen}}
+<div class="board">
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+    <div class="tile black"></div>
+    <div class="tile white"></div>
+
+
+
+
+
+</div>
 {{outlet}}
