--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,7 @@
 .board{
     margin-left: auto;
     margin-right: auto;
-    border: 10px solid red;
+    border: 10px solid gray;
     width: 800px;
     height: 800px;
 }
@@ -9,10 +9,75 @@
     float: left;
     width: 100px;
     height: 100px;
+    background-size: contain;
 }
 .black{
-    background-color: black;
+    background-color: #4B9B99;
 }
 .white{
     background-color: #eee;
+}
+.br{
+
+  background-image: url("./images/chesspieces/br.svg");
+
+}
+.bn{
+
+  background-image: url("./images/chesspieces/bn.svg");
+
+}
+.bb{
+
+  background-image: url("./images/chesspieces/bb.svg");
+
+}
+.bq{
+
+  background-image: url("./images/chesspieces/bq.svg");
+
+}
+.bk{
+
+  background-image: url("./images/chesspieces/bk.svg");
+
+}
+
+.bp{
+
+  background-image: url("./images/chesspieces/bp.svg");
+
+}
+
+
+.wr{
+
+  background-image: url("./images/chesspieces/wr.svg");
+
+}
+.wn{
+
+  background-image: url("./images/chesspieces/wn.svg");
+
+}
+.wb{
+
+  background-image: url("./images/chesspieces/wb.svg");
+
+}
+.wq{
+
+  background-image: url("./images/chesspieces/wq.svg");
+
+}
+.wk{
+
+  background-image: url("./images/chesspieces/wk.svg");
+
+}
+
+.wp{
+
+  background-image: url("./images/chesspieces/wp.svg");
+
 }
