werkende FEN input

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,81 +1,78 @@
-<h1><b>pwschess</b></h1>
-{{fen}}
+
+{{input type="text" value=fen placeholder="Vul hier een FEN in"}}
 <div class="board">
-    <div class="tile white br"></div>
-    <div class="tile black bn"></div>
-    <div class="tile white bb"></div>
-    <div class="tile black bq"></div>
-    <div class="tile white bk"></div>
-    <div class="tile black bb"></div>
-    <div class="tile white bn"></div>
-    <div class="tile black br"></div>
 
-    <div class="tile black bp"></div>
-    <div class="tile white bp"></div>
-    <div class="tile black bp"></div>
-    <div class="tile white bp"></div>
-    <div class="tile black bp"></div>
-    <div class="tile white bp"></div>
-    <div class="tile black bp"></div>
-    <div class="tile white bp"></div>
+  <div class="tile white br"></div>
+  <div class="tile black bn"></div>
+  <div class="tile white bb"></div>
+  <div class="tile black bq"></div>
+  <div class="tile white bk"></div>
+  <div class="tile black bb"></div>
+  <div class="tile white bn"></div>
+  <div class="tile black br"></div>
 
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
+  <div class="tile black bp"></div>
+  <div class="tile white bp"></div>
+  <div class="tile black bp"></div>
+  <div class="tile white bp"></div>
+  <div class="tile black bp"></div>
+  <div class="tile white bp"></div>
+  <div class="tile black bp"></div>
+  <div class="tile white bp"></div>
 
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
 
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
 
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
-    <div class="tile black"></div>
-    <div class="tile white"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
 
-    <div class="tile white wp"></div>
-    <div class="tile black wp"></div>
-    <div class="tile white wp"></div>
-    <div class="tile black wp"></div>
-    <div class="tile white wp"></div>
-    <div class="tile black wp"></div>
-    <div class="tile white wp"></div>
-    <div class="tile black wp"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
+  <div class="tile black"></div>
+  <div class="tile white"></div>
 
-    <div class="tile black wr"></div>
-    <div class="tile white wn"></div>
-    <div class="tile black wb"></div>
-    <div class="tile white wq"></div>
-    <div class="tile black wk"></div>
-    <div class="tile white wb"></div>
-    <div class="tile black wn"></div>
-    <div class="tile white wr"></div>
+  <div class="tile white wp"></div>
+  <div class="tile black wp"></div>
+  <div class="tile white wp"></div>
+  <div class="tile black wp"></div>
+  <div class="tile white wp"></div>
+  <div class="tile black wp"></div>
+  <div class="tile white wp"></div>
+  <div class="tile black wp"></div>
 
-
-
-
+  <div class="tile black wr"></div>
+  <div class="tile white wn"></div>
+  <div class="tile black wb"></div>
+  <div class="tile white wq"></div>
+  <div class="tile black wk"></div>
+  <div class="tile white wb"></div>
+  <div class="tile black wn"></div>
+  <div class="tile white wr"></div>
 
 </div>
 {{outlet}}
