--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,78 +1,9 @@
 
-{{input type="text" value=fen placeholder="Vul hier een FEN in"}}
+{{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}}
 <div class="board">
 
-  <div class="tile white br"></div>
-  <div class="tile black bn"></div>
-  <div class="tile white bb"></div>
-  <div class="tile black bq"></div>
-  <div class="tile white bk"></div>
-  <div class="tile black bb"></div>
-  <div class="tile white bn"></div>
-  <div class="tile black br"></div>
-
-  <div class="tile black bp"></div>
-  <div class="tile white bp"></div>
-  <div class="tile black bp"></div>
-  <div class="tile white bp"></div>
-  <div class="tile black bp"></div>
-  <div class="tile white bp"></div>
-  <div class="tile black bp"></div>
-  <div class="tile white bp"></div>
-
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-  <div class="tile black"></div>
-  <div class="tile white"></div>
-
-  <div class="tile white wp"></div>
-  <div class="tile black wp"></div>
-  <div class="tile white wp"></div>
-  <div class="tile black wp"></div>
-  <div class="tile white wp"></div>
-  <div class="tile black wp"></div>
-  <div class="tile white wp"></div>
-  <div class="tile black wp"></div>
-
-  <div class="tile black wr"></div>
-  <div class="tile white wn"></div>
-  <div class="tile black wb"></div>
-  <div class="tile white wq"></div>
-  <div class="tile black wk"></div>
-  <div class="tile white wb"></div>
-  <div class="tile black wn"></div>
-  <div class="tile white wr"></div>
-
+  {{#each board as |tile|}}
+       <div class={{tile}}></div>
+   {{/each}}
 </div>
 {{outlet}}
