--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
 {{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}}
 <div class="board">
 
-  {{#each board as |tile|}}
+  {{#each tiles as |tile|}}
        <div class={{tile}}></div>
    {{/each}}
 </div>
