--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,17 @@
 
 {{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}}
 <div class="board">
-
   {{#each tiles as |tile|}}
        <div class={{tile}}></div>
    {{/each}}
 </div>
+
+<b>To Move :</b> {{fenInfo.ToMove}}<br/>
+ <h4>Castling Availabilty</h4>
+<b>White Long: </b>{{#if fenInfo.CastlingWq}}True{{else}}False{{/if}}<br/>
+<b>White Short: </b>{{#if fenInfo.CastlingWk}}True{{else}}False{{/if}}<br/>
+<b>Black Long: </b>{{#if fenInfo.CastlingBq}}True{{else}}False{{/if}}<br/>
+<b>Black Short: </b>{{#if fenInfo.CastlingBk}}True{{else}}False{{/if}}<br/>
+<b>En passant target: </b>{{fenInfo.EnPassant}}
+
 {{outlet}}
