--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,13 +10,15 @@
    {{/each}}
 </div>
 <div class = "column3">
+{{#if fenInfo.FenTrue}}
 <b>To Move :</b> {{fenInfo.ToMove}}<br/>
- <h4>Castling Availabilty</h4>
+<h4>Castling Availabilty</h4>
 <b>White Long: </b>{{#if fenInfo.CastlingWq}}True{{else}}False{{/if}}<br/>
 <b>White Short: </b>{{#if fenInfo.CastlingWk}}True{{else}}False{{/if}}<br/>
 <b>Black Long: </b>{{#if fenInfo.CastlingBq}}True{{else}}False{{/if}}<br/>
 <b>Black Short: </b>{{#if fenInfo.CastlingBk}}True{{else}}False{{/if}}<br/>
 <b>En passant target: </b>{{fenInfo.EnPassant}}
+{{/if}}
 </div>
 {{outlet}}
 </div>
