--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,8 @@
 
 <div class = "column1">
 {{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}}
+{{input type="text" value=move placeholder="" size=30}}
+<button {{action "playMove"}}>Move</button>
 </div>
 
 <div class="board column2" >
