--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="row">
 
 <div class = "column1">
-{{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}}
+{{input type="text" value=fen placeholder="Vul hier een FEN in" size=60}} <br/>
 
 {{input class = (unless validMove 'valid') type="text" value=move placeholder="" size=30}}
 <button {{action "playMove"}}>Move</button>
