--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,7 +9,8 @@
 .column1 {
     flex: 25%;
 }
-
+.column2 {
+}
 .column3 {
     flex: 25%;
     text-align: right;
@@ -17,16 +18,16 @@
 
 .board{
     border: 10px solid gray;
-    height: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
+    height: 800px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    width: 800px;
 }
 .tile{
     background-size: contain;
     float: left;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
 }
 
 .black{
