--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -18,16 +18,16 @@
 
 .board{
     border: 10px solid gray;
-    height: 400px;
-    /* margin-left: auto;
-    margin-right: auto; */
-    width: 400px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
 }
 .tile{
     background-size: contain;
     float: left;
-    height: 50px;
-    width: 50px;
+    height: 75px;
+    width: 75px;
 }
 
 .black{
