--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,14 +7,14 @@
 
 <form {{action "playMove" on="submit"}}>
     {{input class = (unless validMove 'valid') type="text" value=move placeholder=""}}
-    <button type="submit">Move</button>
+    <button type = "submit">Move</button>
 </form>
 </div>
 
 <div class="board column2" >
   {{#each tiles as |tile|}}
-       <div class={{tile}}></div>
-   {{/each}}
+    <div class = {{tile.class}} {{action "playMove" tile.index}}> </div>
+  {{/each}}
 </div>
 <div class = "column3">
 {{#if fenInfo.FenTrue}}
