--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,36 +1,42 @@
 .valid{
-     background-color: red;
+  background-color: red;
 }
-.form-control {
+.form-control{
   width: 100%;
 }
-.row {
-    display: flex;
+.row{
+  display: flex;
 }
 
-.column1 {
+.column1{
   margin: 10px;
   width: 420px;
 }
-.column2 {
-    margin: 10px;
-    width: 420px;
+.column2{
+  margin: 10px;
+  width: 420px;
 }
-.column3 {
-    margin: 10px;
+.column3{
+  margin: 10px;
+}
+.column4{
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: 215px;
 }
 
 .board{
-    border: 10px solid gray;
-    height: 400px;
-    margin-right: auto;
-    width: 400px;
+  border: 10px solid gray;
+  height: 400px;
+  margin-right: auto;
+  width: 400px;
 }
 .tile{
-    background-size: contain;
-    float: left;
-    height: 50px;
-    width: 50px;
+  background-size: contain;
+  float: left;
+  height: 50px;
+  width: 50px;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -40,23 +46,25 @@
 }
 
 @media only screen and (max-width: 480px) {
-  .column1 {
+  .column1{
     width: 280px;
   }
-  .column2 {
-      width: 280px;
+  .column2{
+    width: 280px;
+  }
+  .column4{
+    margin-left: 10px;
+
   }
   .board{
-      height: 280px;
-      width: 280px;
+    height: 280px;
+    width: 280px;
   }
   .tile{
-      height: 35px;
-      width: 35px;
+    height: 35px;
+    width: 35px;
   }
 }
-
-
 
 .black{
     background-color: #4B9B99;
