--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,16 +16,19 @@
     <div class = {{tile.class}} {{action "playMove" tile.index true}}> </div>
   {{/each}}
 </div>
+<div class = "column4">
+<b>Execution Time:</b><br/> {{executionTime}}
+</div>
 <div class = "column3">
-{{#if fenInfo.FenTrue}}
-  <b>To Move :</b> {{fenInfo.ToMove}}<br/>
-  <h4>Castling Availability</h4>
-  <b>White Long: </b>{{#if fenInfo.CastlingWq}}True{{else}}False{{/if}}<br/>
-  <b>White Short: </b>{{#if fenInfo.CastlingWk}}True{{else}}False{{/if}}<br/>
-  <b>Black Long: </b>{{#if fenInfo.CastlingBq}}True{{else}}False{{/if}}<br/>
-  <b>Black Short: </b>{{#if fenInfo.CastlingBk}}True{{else}}False{{/if}}<br/>
-  <b>En passant target: </b>{{fenInfo.EnPassant}}
-{{/if}}
+  {{#if fenInfo.FenTrue}}
+    <b>To Move: </b> {{fenInfo.ToMove}}<br/>
+    <h4>Castling Availability</h4>
+    <b>White Long: </b>{{#if fenInfo.CastlingWq}}True{{else}}False{{/if}}<br/>
+    <b>White Short: </b>{{#if fenInfo.CastlingWk}}True{{else}}False{{/if}}<br/>
+    <b>Black Long: </b>{{#if fenInfo.CastlingBq}}True{{else}}False{{/if}}<br/>
+    <b>Black Short: </b>{{#if fenInfo.CastlingBk}}True{{else}}False{{/if}}<br/>
+    <b>En passant target: </b>{{fenInfo.EnPassant}}
+  {{/if}}
 </div>
 {{outlet}}
 </div>
